--- a/Project4/res/values/strings.xml
+++ b/Project4/res/values/strings.xml
@@ -1,35 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">ProjektZeit</string>
-    
-    <string name="title_project_dashboard">ProjektZeit</string>
+    <string name="app_name">PTime</string>
+    <string name="title_project_dashboard">@string/app_name</string>
     <string name="title_project_add">Projekt hinzufügen</string>
     <string name="title_project_change">Projekt bearbeiten</string>
     <string name="title_booking_list">Zeitbuchungen</string>
     <string name="title_project_color_picker">Projektfarbe auswählen</string>
+    <string name="title_booking_edit">Buchung bearbeiten</string>
     
     <string name="comment_project_added">Projekt hinzugefügt.</string>
+    
     <string name="project_detail_customer_label">KUNDE</string>
     <string name="project_detail_customer_text">Name Kunde</string>
     <string name="project_detail_project_label">PROJEKT</string>
     <string name="project_detail_project_text">Name Projekt</string>
-    <string name="labelButtonBegin">Kommen Kunde</string>
-    <string name="labelButtonEnd">Gehen Kunde</string>
-    <string name="labelButtonBegin2">Kommen Office</string>
-    <string name="labelButtonEnd2">Gehen Office</string>
-    <string name="menuSettings">Einstellungen</string>
-    <string name="menuStatistic">Statistik</string>
-    <string name="serviceName">com.gek.and.project4service.SERVICE</string>
-    <string name="labelSettingsButtonBeginCustomer">Text auf Button Kommen Kunde</string>
-    <string name="labelSettingsButtonEndCustomer">Text auf Button Gehen Kunde</string>
-    <string name="labelSettingsButtonBeginOffice">Text auf Button Kommen HomeOffice</string>
-    <string name="labelSettingsButtonEndOffice">Text auf Button Gehen HomeOffice</string>
-    <string name="buttonSettingsSave">Speichern</string>
-    <string name="buttonProjectCome">Kommen</string>
-    <string name="buttonProjectGo">Gehen</string>
+    
     <string name="buttonColorCancel">Abbrechen</string>
     <string name="buttonColorSelect">Auswählen</string>
+    
+    <string name="booking_detail_from_label">START</string>
+    <string name="booking_detail_to_label">STOP</string>
+    <string name="booking_detail_project_label">PROJEKT</string>
+    <string name="booking_detail_note_label">NOTIZ</string>
     
     <string name="action_list_bookings">Buchungen anzeigen</string>
     <string name="action_select_color">Farbe auswählen</string>
@@ -43,5 +36,9 @@
     <string name="action_save">Speichern</string>
     <string name="action_discard">Löschen</string>
     <string name="action_export">Daten exportieren</string>
+    
+    <string name="settings_cat_bookings">Buchungsliste</string>
+    <string name="setting_bookings_showNote_summary">Notiz bei jeder Buchung anzeigen</string>
+    <string name="setting_bookings_showNote_title">Notiz anzeigen</string>
     
 </resources>
