commit vor Umstieg auf intellij

--- a/Project4/res/values/strings.xml
+++ b/Project4/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="title_booking_edit">Buchung bearbeiten</string>
     <string name="title_period_summary">Summe je Projekt und Periode</string>
     <string name="title_project_selection">Projektauswahl</string>
+    <string name="title_project_management">Projekte verwalten</string>
     
     <string name="comment_project_added">Projekt hinzugefügt.</string>
     
@@ -18,12 +19,17 @@
     <string name="project_detail_customer_text">Name Kunde</string>
     <string name="project_detail_project_label">PROJEKT</string>
     <string name="project_detail_project_text">Name Projekt</string>
+    <string name="project_detail_active_label">PROJEKTSTATUS</string>
+    <string name="project_detail_active_text">Projekt aktiv</string>
+    <string name="project_detail_active_text_on">aktiv</string>
+    <string name="project_detail_active_text_off">inaktiv</string>
     
     <string name="buttonColorCancel">Abbrechen</string>
     <string name="buttonColorSelect">Auswählen</string>
     
     <string name="booking_detail_from_label">START</string>
     <string name="booking_detail_to_label">STOP</string>
+    <string name="booking_detail_duration_label">DAUER</string>
     <string name="booking_detail_project_label">PROJEKT</string>
     <string name="booking_detail_note_label">NOTIZ</string>
     
@@ -40,6 +46,7 @@
     <string name="action_discard">Löschen</string>
     <string name="action_export">Daten exportieren</string>
     <string name="action_add_booking">Neue Buchung</string>
+    <string name="action_manage_projects">Projekte verwalten</string>
     
     <string name="settings_cat_bookings">Buchungsliste</string>
     <string name="setting_bookings_showNote_summary">Notiz bei jeder Buchung anzeigen</string>
